--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "install": "^0.13.0",
     "npm": "^10.9.2",
+    "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.0-beta.2",
     "vue-router": "^4.0.13"
